Prototipando o cadastro de cliente

--- a/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -26,7 +26,7 @@
 	<header>
 	<div>
 		<h:link>
-			<h:graphicImage library="images" name="logo_andreitoledo.png" />
+			<h:graphicImage library="images" name="logo_pedidovenda.png" />
 		</h:link>
 	</div>
 	</header>
